--- a/dl.platform-os.org.conf
+++ b/dl.platform-os.org.conf
@@ -4,8 +4,16 @@ server {
 
   autoindex on;
   autoindex_exact_size on;
-  autoindex_format json;
+  autoindex_format xml;
   autoindex_localtime on;
 
   root /var/www/sites/dl.platform-os.org;
+
+  location / {
+    try_files $uri @autoindex;
+  }
+
+  location @autoindex {
+    xslt_stylesheet /var/www/sites/dirlist.xslt path='$uri';
+  }
 }
